--- a/equipment-management/pom.xml
+++ b/equipment-management/pom.xml
@@ -100,6 +100,10 @@
 			<artifactId>spring-data-jpa</artifactId>
 			<version>3.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+		</dependency>
 
 		<!-- Other dependencies -->
 		<dependency>
