--- a/equipment-management/Dockerfile
+++ b/equipment-management/Dockerfile
@@ -1,4 +1,12 @@
-FROM ubuntu:latest
-LABEL authors="user"
+FROM openjdk:17
 
-ENTRYPOINT ["top", "-b"]
+# Expose the application port
+EXPOSE 8080
+
+# Copy the application jar to the container
+ADD /target/equipment-management-0.0.1-SNAPSHOT.jar /equipment-management.jar
+
+
+
+
+ENTRYPOINT ["java", "-jar","equipment-management.jar"]
