--- a/equipment-management/src/main/resources/application.properties
+++ b/equipment-management/src/main/resources/application.properties
@@ -18,3 +18,4 @@ security.jwt.secret-key=e89f4b8d7c6a5f3e2d1c0b9a8f7e6d5c4b3a2f1e0d9c8b7a6f5e4d3c
 security.jwt.token-prefix=Bearer
 security.jwt.header=Authorization
 security.jwt.expiration=31536000000 # 1 year in milliseconds
+#spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
