--- a/equipment-management/pom.xml
+++ b/equipment-management/pom.xml
@@ -55,7 +55,12 @@
             <artifactId>hibernate-validator</artifactId>
 
         </dependency>
-
+        <!--  <dependency>
+          <groupId>com.fasterxml.jackson.datatype</groupId>
+              <artifactId>jackson-datatype-jsr310</artifactId>
+              <version>2.13.3</version>
+          </dependency>
+  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
