update gestion ticket

--- a/equipment-management/pom.xml
+++ b/equipment-management/pom.xml
@@ -296,6 +296,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>equipment-management</finalName>
     </build>
 
 </project>
