--- a/equipment-management/src/main/resources/application.properties
+++ b/equipment-management/src/main/resources/application.properties
@@ -3,7 +3,9 @@ spring.application.name=equipment-management
 server.port=8080
 
 # Database configuration
+#spring.datasource.url=jdbc:mysql://mysqldb:3306/equipment_management?createDatabaseIfNotExist=true
 spring.datasource.url=jdbc:mysql://localhost:3306/equipment_management?createDatabaseIfNotExist=true
+
 spring.datasource.username=root
 spring.datasource.password=
 
